Update and rename 2024-02-17-paper-title-number-4.md to 2024-05-01-iclr.md

--- a/_publications/2024-05-01-iclr.md
+++ b/_publications/2024-05-01-iclr.md
@@ -2,6 +2,7 @@
 title: "Physics-informed Machine Learning-Based Cloud Microphysics Parameterization for Earth System Models"
 collection: publications
 category: conferences
+permalink: /publication/2024-05-01-iclr
 excerpt: 'Presented at ICLR 2024 Workshop on Tackling Climate Change with Machine Learning.'
 date: 2024-05-01
 venue: 'ICLR 2024 Workshop on Tackling Climate Change with Machine Learning'
